PLAT-780: removed word-wrap rule that was causing the issue

--- a/cr/themes/custom/campaign_base/sass/components/links/_links.scss
+++ b/cr/themes/custom/campaign_base/sass/components/links/_links.scss
@@ -30,7 +30,6 @@
 
 .link {
   text-decoration: none;
-  word-break: break-all;
   color: inherit;
   border-bottom: 4px solid $colour-red;
   font-family: $font-bold;
